// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message :props :closeBtn is a function, () => VNode. 1`] = `
<div
  class="t-message t-is-info t-is-closable"
>
  <svg
    class="t-icon t-icon-info-circle-filled"
    fill="none"
    height="1em"
    viewBox="0 0 16 16"
    width="1em"
  >
    <path
      d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
      fill="currentColor"
      fillOpacity="0.9"
    />
  </svg>
  <!---->
  <span
    class="t-message-close"
  >
    <b
      class="t-message-close-content"
    >
      x
    </b>
  </span>
</div>
`;

exports[`Message :props :closeBtn is a tring, equal "关闭". 1`] = `
<div
  class="t-message t-is-info t-is-closable"
>
  <svg
    class="t-icon t-icon-info-circle-filled"
    fill="none"
    height="1em"
    viewBox="0 0 16 16"
    width="1em"
  >
    <path
      d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
      fill="currentColor"
      fillOpacity="0.9"
    />
  </svg>
  <!---->
  <span
    class="t-message-close"
  >
    关闭
  </span>
</div>
`;

exports[`Message :props :closeBtn is true, render default close button. 1`] = `
<div
  class="t-message t-is-info t-is-closable"
>
  <svg
    class="t-icon t-icon-info-circle-filled"
    fill="none"
    height="1em"
    viewBox="0 0 16 16"
    width="1em"
  >
    <path
      d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
      fill="currentColor"
      fillOpacity="0.9"
    />
  </svg>
  <!---->
  <span
    class="t-message-close"
  >
    <svg
      class="t-icon t-icon-close"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
        fill="currentColor"
        fillOpacity="0.9"
      />
    </svg>
  </span>
</div>
`;

exports[`Message :props :default is a funtion, () => <b>这是重要信息</b> 1`] = `
<div
  class="t-message t-is-info"
>
  <svg
    class="t-icon t-icon-info-circle-filled"
    fill="none"
    height="1em"
    viewBox="0 0 16 16"
    width="1em"
  >
    <path
      d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
      fill="currentColor"
      fillOpacity="0.9"
    />
  </svg>
  <b>
    这是重要信息
  </b>
  <span
    class="t-message-close"
  >
    <!---->
  </span>
</div>
`;

exports[`Message :props :default is a string, 这是普通信息 1`] = `
<div
  class="t-message t-is-info"
>
  <svg
    class="t-icon t-icon-info-circle-filled"
    fill="none"
    height="1em"
    viewBox="0 0 16 16"
    width="1em"
  >
    <path
      d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
      fill="currentColor"
      fillOpacity="0.9"
    />
  </svg>
  这是普通信息
  <span
    class="t-message-close"
  >
    <!---->
  </span>
</div>
`;

exports[`Message :props :icon is a funtion, () => MoreIcon 1`] = `
<div
  class="t-message t-is-info"
>
  <svg
    class="t-icon t-icon-more"
    fill="none"
    height="1em"
    viewBox="0 0 16 16"
    width="1em"
  >
    <path
      d="M8 4a1 1 0 100-2 1 1 0 000 2zM8 9a1 1 0 100-2 1 1 0 000 2zM9 13a1 1 0 11-2 0 1 1 0 012 0z"
      fill="currentColor"
      fillOpacity="0.9"
    />
  </svg>
  <!---->
  <span
    class="t-message-close"
  >
    <!---->
  </span>
</div>
`;

exports[`Message :props :icon is false 1`] = `
<div
  class="t-message t-is-info"
>
  <!---->
  <!---->
  <span
    class="t-message-close"
  >
    <!---->
  </span>
</div>
`;

exports[`Message :props :theme info,success,warning,error,question,loading 1`] = `
<div
  class="t-message t-is-info"
>
  <svg
    class="t-icon t-icon-info-circle-filled"
    fill="none"
    height="1em"
    viewBox="0 0 16 16"
    width="1em"
  >
    <path
      d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
      fill="currentColor"
      fillOpacity="0.9"
    />
  </svg>
  <!---->
  <span
    class="t-message-close"
  >
    <!---->
  </span>
</div>
`;

exports[`Message :props :theme info,success,warning,error,question,loading 2`] = `
<div
  class="t-message t-is-success"
>
  <svg
    class="t-icon t-icon-check-circle-filled"
    fill="none"
    height="1em"
    viewBox="0 0 16 16"
    width="1em"
  >
    <path
      d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
      fill="currentColor"
      fillOpacity="0.9"
    />
  </svg>
  <!---->
  <span
    class="t-message-close"
  >
    <!---->
  </span>
</div>
`;

exports[`Message :props :theme info,success,warning,error,question,loading 3`] = `
<div
  class="t-message t-is-warning"
>
  <svg
    class="t-icon t-icon-error-circle-filled"
    fill="none"
    height="1em"
    viewBox="0 0 16 16"
    width="1em"
  >
    <path
      d="M15 8A7 7 0 101 8a7 7 0 0014 0zM8.5 4v5.5h-1V4h1zm-1.1 7h1.2v1.2H7.4V11z"
      fill="currentColor"
      fillOpacity="0.9"
    />
  </svg>
  <!---->
  <span
    class="t-message-close"
  >
    <!---->
  </span>
</div>
`;

exports[`Message :props :theme info,success,warning,error,question,loading 4`] = `
<div
  class="t-message t-is-error"
>
  <svg
    class="t-icon t-icon-error-circle-filled"
    fill="none"
    height="1em"
    viewBox="0 0 16 16"
    width="1em"
  >
    <path
      d="M15 8A7 7 0 101 8a7 7 0 0014 0zM8.5 4v5.5h-1V4h1zm-1.1 7h1.2v1.2H7.4V11z"
      fill="currentColor"
      fillOpacity="0.9"
    />
  </svg>
  <!---->
  <span
    class="t-message-close"
  >
    <!---->
  </span>
</div>
`;

exports[`Message :props :theme info,success,warning,error,question,loading 5`] = `
<div
  class="t-message t-is-question"
>
  <svg
    class="t-icon t-icon-help-circle-filled"
    fill="none"
    height="1em"
    viewBox="0 0 16 16"
    width="1em"
  >
    <path
      d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.8 6.63a2.2 2.2 0 014.39 0c0 .97-.75 1.72-1.49 2.02a.34.34 0 00-.2.32v.8h-1v-.8c0-.56.33-1.04.82-1.24.5-.2.87-.66.87-1.1a1.2 1.2 0 00-2.39 0h-1zm1.67 4.54a.53.53 0 111.05 0 .53.53 0 01-1.05 0z"
      fill="currentColor"
      fillOpacity="0.9"
    />
  </svg>
  <!---->
  <span
    class="t-message-close"
  >
    <!---->
  </span>
</div>
`;

exports[`Message :props :theme info,success,warning,error,question,loading 6`] = `
<div
  class="t-message t-is-loading"
>
  <div
    class="t-loading t-size-m t-loading-lock v-transfer-dom"
  >
    <svg
      class="t-loading__gradient t-icon-loading"
      height="1em"
      size="medium"
      version="1.1"
      viewBox="0 0 14 14"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <foreignobject
        height="12"
        width="12"
        x="1"
        y="1"
      >
        <div
          class="t-loading__gradient-conic"
        />
      </foreignobject>
    </svg>
    <!---->
  </div>
  <!---->
  <span
    class="t-message-close"
  >
    <!---->
  </span>
</div>
`;

exports[`Message :props pure message contains two classes 1`] = `
<div
  class="t-message t-is-info"
>
  <svg
    class="t-icon t-icon-info-circle-filled"
    fill="none"
    height="1em"
    viewBox="0 0 16 16"
    width="1em"
  >
    <path
      d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
      fill="currentColor"
      fillOpacity="0.9"
    />
  </svg>
  <!---->
  <span
    class="t-message-close"
  >
    <!---->
  </span>
</div>
`;

exports[`Message <slot> <icon> 1`] = `
<div
  class="t-message t-is-info"
>
  
  <svg
    class="t-icon t-icon-more"
    fill="none"
    height="1em"
    viewBox="0 0 16 16"
    width="1em"
  >
    <path
      d="M8 4a1 1 0 100-2 1 1 0 000 2zM8 9a1 1 0 100-2 1 1 0 000 2zM9 13a1 1 0 11-2 0 1 1 0 012 0z"
      fill="currentColor"
      fillOpacity="0.9"
    />
  </svg>
  
  <!---->
  <span
    class="t-message-close"
  >
    <!---->
  </span>
</div>
`;
